--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,32 @@
 @font-face {
 			font-family: 'HyliaSerif';
-			src: url('HyliaSerif.otf') format('otf');
+			src: url('HyliaSerif.woff') format('woff');
+		}
+@font-face {
+			font-family: 'Rodin';
+			src: url('FOT-Rodin.woff') format('woff');
 		}
 		
         body {
-            font-family: 'HyliaSerif', serif;
+            font-family: 'HyliaSerif', sans-serif;
             text-align: center;
 			color: white;
-			background-image: url('bg.png');
-            background-size: 25%;
+			background-image: url('bg2.jpg');
+            background-size: cover;
             background-position: center;
-            background-repeat: repeat;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
         }
 
         h1 {
-		font-family: 'HyliaSerif', serif;
+		font-family: 'HyliaSerif', sans-serif;
             color: white;
         }
 		
 		#armor-sets {
 			column-count: 2;
 			column-gap: 20px;
+			padding-top: 20px;
 		}
 
 		#armor-sets:after {
@@ -30,6 +36,8 @@
 		}
 
         .armor-set-details > summary {
+			font-family: 'HyliaSerif', sans-serif;
+			font-style: normal;
 			background-color: #49D59C;
 			color: white;
 			padding: 10px;
@@ -37,14 +45,17 @@
 			page-break-inside: avoid;
 			break-inside: avoid;
 			margin-bottom: 6px;
+			border: 4px solid #ccc;
 		}
 		
 		.armor-set-details[open] {
-			break-inside: avoid; /* Prevent breaks inside opened armor set details */
+			font-family: 'Rodin', sans-serif;
+			font-style: italic;
+			break-inside: avoid;
 		}
 		
 		.armor-piece-fieldset {
-			background-color: rgba(246, 215, 84, 0.5);
+			background-color: rgba(0, 0, 0, 0.5);
 			page-break-inside: avoid;
 			break-inside: avoid;
 			width: 100%;
@@ -66,12 +77,18 @@
             margin-right: 5px;
         }
 		
-		#total-cost,
-		#total-materials ul {
-			background-color: rgba(246, 215, 84, 0.5)
+		#items-required {
+			max-width: 2000px;
+			margin: 0 auto; 
+			padding: 20px; 
+			background-color: rgba(0, 0, 0, 0.5);
+			text-align: center;
+			border: 4px solid #ccc;
 		}
 
         .materials-list {
+			font-family: 'Rodin', sans-serif;
+			font-style: italic;
             list-style: none;
             padding: 0;
             margin-top: 5px;
@@ -85,7 +102,16 @@
             column-count: 3;
             column-gap: 20px;
         }
-
+		
+		#total-cost {
+			font-family: 'Rodin', sans-serif;
+			font-style: oblique;
+			
+		#no-materials-message {
+			font-family: 'Rodin', sans-serif;
+			font-style: oblique
+		}
+		
         #total-materials {
             margin-top: 20px;
         }
